// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mistakes should render correctly With non-zero count 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`Mistakes should render correctly With zero count 1`] = `
<div
  className="game__mistakes"
/>
`;
